--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ p {
 pud {
     font-size: 1.em;
     line-height: 0.9em;
-    color: #333;
+    color: #0000FFF;
 }
 footer {
     border-top: 1px solid #d5d5d5;
