--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,8 @@ p {
     color: #333;
 }
 pud {
-    font-size: 1.em;
-    line-height: 0.9em;
+    font-size: 1.2em;
+    line-height: 1.0em;
     color: #0000FFF;
 }
 footer {
