--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,25 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+nav ul, footer ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
+}
+nav ul li, footer ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
 /* Add a black background color to the top navigation */
-.topnav {
+nav {
   background-color: #333;
   overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+nav a {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -19,16 +30,17 @@ body {
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+nav a:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
+nav a.active {
   background-color: #4CAF50;
   color: white;
 }
+
 a {
     text-decoration: none;
     color: #999;
@@ -36,6 +48,7 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
