--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
 
 .bg-image {
   /* The image used */
-  background-image: src("/hubbledeep.jpg");
+  background-image: url("/hubbledeep.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
