--- a/css/main.css
+++ b/css/main.css
@@ -26,12 +26,12 @@ body {
 /* Position text in the middle of the page/image */
 .bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  background-color: rgba(0,0,0, 0.5); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -94,15 +94,10 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: white;
     margin-bottom: 3cm;
 }
-pud {
-    font-size: 1.2em;
-    line-height: 1.0em;
-    color: #0000FFF;
-    margin-bottom: 3cm;
-}
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
