--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
   box-sizing: border-box;
 }
 
-bg-image {
+.bg-image {
   /* The image used */
   background-image: url("hubbledeep.jpg");
 
@@ -24,7 +24,7 @@ bg-image {
 }
 
 /* Position text in the middle of the page/image */
-bg-text {
+.bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.5); /* Black w/opacity/see-through */
   color: white;
