--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ nav {
 
 /* Style the links inside the navigation bar */
 nav a {
-  float: left;
+  float: right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
