--- a/css/main.css
+++ b/css/main.css
@@ -84,10 +84,13 @@ a:hover {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-
+p {
+    font-size: 1.2em;
+    line-height: 1.4em;
+}
 
 footer {
     border-top: 1px solid #d5d5d5;
