--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ nav ul li, footer ul li {
 
 /* Add a black background color to the top navigation */
 nav {
-  background-color: #333;
+  background-color: black;
   overflow: hidden;
 }
 
