--- a/css/main.css
+++ b/css/main.css
@@ -93,8 +93,10 @@ p {
 }
 
 footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: -200px;
 }
 
 ul.posts { 
