--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ nav ul li, footer ul li {
 /* Add a black background color to the top navigation */
 nav {
   background-color: black;
+  border: 3px solid #f1f1f1;
   overflow: hidden;
 }
 
