--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ nav ul li, footer ul li {
 /* Add a black background color to the top navigation */
 nav {
   background-color: black;
-  border: 2px solid #f1f1f1;
+  /*border: 2px solid #f1f1f1;
   overflow: hidden;
 }
 
@@ -97,8 +97,7 @@ footer {
     color: white;
     clear: both;
     position: relative;
-    height: 90px;
-    margin-top: -90px;
+    margin-top: -80px;
 }
 
 ul.posts { 
