--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ nav ul li, footer ul li {
 nav {
   background-color: #333;
   overflow: hidden;
+}
   /*border: 2px solid #f1f1f1;
   overflow: hidden;
 }
