--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ nav ul, footer ul {
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+    color: white
 }
 
 /* Add a black background color to the top navigation */
