--- a/css/main.css
+++ b/css/main.css
@@ -102,17 +102,18 @@ footer {
     clear: both;
     position: relative;
     margin-top: 900px;
+    margin-right: 20px;
 }
 footer a {
     float:left;
-    color: white
+    color: #F5F5F5;
 }
 
 div.line
 {
     height: 1px;
     width: 100%;
-    background-color: white;
+    background-color: #F5F5F5;
 }
 
 ul.posts { 
