--- a/css/main.css
+++ b/css/main.css
@@ -20,14 +20,14 @@ body {
 
 
 /* Position text in the middle of the page/image */
-.bg-text {
+bg-text2 {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.5); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
   position: absolute;
-  top: 90%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
