--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2055,12 +2055,12 @@ input, select, textarea {
 	.button {
 		position: relative;
 		display: inline-block;
-		background: #df7366;
+		background: #1e0033;
 		color: #fff;
 		text-align: center;
 		border-radius: 0.5em;
 		text-decoration: none;
-		padding: 0.65em 3em 0.65em 3em;
+		padding: 0.50em 2em 0.50em 2em;
 		border: 0;
 		cursor: pointer;
 		outline: 0;
